# vram-calc

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/ISSUE_TEMPLATE/: validation-report.yml
.github/workflows/: ci.yml  pages.yml
docs/: formulas.md  study_guide.md  validation_report.md
src/vram_calc/: __init__.py  memory.py  models.py  recommend.py
tests/: gen_web_cases.py  test_gguf.py  test_js_parity.py  test_memory.py  test_models.py  test_recommend.py  test_smoke.py
validation/: README.md  analyze.py  exp1_weights_kv.py  exp2_training.py  exp3_overhead.py  utils.py
validation/results/: exp1_qwen2.5-0.5b_fp16_b1_s2048.json  exp1_qwen2.5-1.5b_fp16_b2_s1024.json  exp2_qwen2.5-0.5b_full_attn-eager_b2_s1024_acc1.json  exp2_qwen2.5-0.5b_full_attn-eager_b2_s1024_acc8.json  exp2_qwen2.5-0.5b_full_attn-eager_ckpt_b2_s1024_acc1.json  exp2_qwen2.5-0.5b_full_attn-sdpa_b2_s1024_acc1.json  exp2_qwen2.5-0.5b_lora_attn-eager_b2_s1024_acc1.json  exp2_qwen2.5-0.5b_qlora_attn-eager_b2_s1024_acc1.json  exp2_qwen2.5-1.5b_lora_attn-eager_b1_s1024_acc1.json
web/: index.html  test_cases.json  vram_calc.js
