[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vram-calc"
version = "0.3.0"
description = "LLM VRAM calculator: weights, gradients, optimizer states, activations, KV-cache breakdown"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lee", email = "kkwanan77@gmail.com" }]
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/lix77777777/vram-calc"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
